# pmi-223-2-Artem-Efimov-efimov.ar

tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/image_processor/: CMakeLists.txt  color.cpp  color.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.h  filter_sequence.cpp  filter_sequence.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  image.cpp  image.h  image_processor.cpp  my_filter.cpp  my_filter.h  negative.cpp  negative.h  parser.cpp  parser.h  readme.md  sharpening.cpp  sharpening.h
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
tasks/word2vec/: word2vec.cpp
tasks/zip2/: zip.h
